--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -251,7 +251,7 @@ html.docs-wrapper {
   border-color: #fa5035;
   color: #fa5035;
   border-width: 1px;
-  letter-spacing: 0.02rem;
+  letter-spacing: 0.002rem;
   margin-right: 0;
   padding: 0 6px;
   display: inline-block;
@@ -265,7 +265,7 @@ html.docs-wrapper {
     border-color: orange;
     color: orange;
     border-width: 1px;
-    letter-spacing: 0.02rem;
+    letter-spacing: 0.002rem;
     margin-right: 0;
     padding: 2px 6px;
     display: inline-block;
@@ -279,7 +279,7 @@ html.docs-wrapper {
     border-color: orange;
     color: orange;
     border-width: 1px;
-    letter-spacing: 0.02rem;
+    letter-spacing: 0.002rem;
     margin-right: 0;
     padding: 2px 6px;
     display: inline-block;
@@ -333,7 +333,7 @@ html.docs-wrapper {
   border-color: #fa5035;
   color: #fa5035;
   border-width: 1px;
-  letter-spacing: 0.02rem;
+  letter-spacing: 0.002rem;
   margin-right: 0;
   padding: 0 6px;
   display: inline-block;
