--- a/examples/customization-login/src/pages/login/styles.css
+++ b/examples/customization-login/src/pages/login/styles.css
@@ -12,7 +12,7 @@
     text-align: center;
     color: #626262;
     font-size: 30px;
-    letter-spacing: -0.04em;
+    letter-spacing: -0.004em;
   }
   
   .imageContainer {
